# rootsense-python-sdk

./: .gitignore  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: AUTO_RESOLUTION.md  MIGRATION_GUIDE.md  OPENTELEMETRY_INTEGRATION.md
examples/: basic_usage.py  complete_example.py  django_example.py  fastapi_app.py  fastapi_example.py  flask_app.py  flask_example.py  performance_example.py  simple_fastapi.py  simple_flask.py  tracing_example.py
examples/django_app/: README.md  settings.py  views.py
rootsense/: __init__.py  client.py  config.py  context.py  events.py
rootsense/collectors/: __init__.py  error_collector.py  prometheus_collector.py
rootsense/instrumentation/: __init__.py  auto.py  exporters.py
rootsense/integrations/: __init__.py  flask.py  wsgi.py
rootsense/middleware/: __init__.py  asgi.py  django.py  fastapi.py  flask.py
rootsense/performance/: __init__.py  database.py  monitor.py
rootsense/processors/: __init__.py  http_processor.py  user_processor.py
rootsense/tracing/: __init__.py  tracer.py
rootsense/transport/: __init__.py  http_transport.py  websocket_transport.py
rootsense/utils/: sanitizer.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_context.py  test_error_collector.py  test_exporters.py  test_integrations.py  test_sanitizer.py  test_transport.py
tests/integration/: test_fastapi_integration.py  test_flask_integration.py
