[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rootsense"
version = "0.1.0"
description = "Python SDK for RootSense - AI-powered incident management"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "RootSense", email = "support@rootsense.ai"}]
keywords = ["rootsense", "error-tracking", "monitoring", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "prometheus-client>=0.19.0",
    "requests>=2.31.0",
    "websockets>=12.0",
    "python-dateutil>=2.8.0"
]

[project.optional-dependencies]
flask = ["flask>=2.0.0"]
fastapi = ["fastapi>=0.100.0", "starlette>=0.27.0"]
django = ["django>=3.2.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-asyncio>=0.21.0", "black>=23.0.0", "responses>=0.23.0"]

[project.urls]
Homepage = "https://rootsense.ai"
Repository = "https://github.com/paschmaria/rootsense-python-sdk"
